<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rl_edit"
                android:layout_marginTop="40dp"
                android:layout_width="match_parent"
                android:layout_height="100dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_centerVertical="true"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="24sp"
                        android:textColor="@color/color_212121"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:textColor="@color/color_9796a1"
                        android:layout_marginTop="12dp"
                        android:text="@string/EditProfile"/>

                </LinearLayout>

                <ImageView
                    android:id="@+id/iv_img"
                    android:layout_width="68dp"
                    android:layout_height="68dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="22dp"
                    android:scaleType="fitXY"/>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="32dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="84dp"
                    android:orientation="vertical"
                    android:layout_marginRight="14dp"
                    android:gravity="center"
                    android:background="@drawable/my_layout_bg">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:background="@mipmap/collect"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:layout_marginTop="8dp"
                        android:textColor="@color/color_212121"
                        android:text="@string/Collect"/>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="84dp"
                    android:orientation="vertical"
                    android:layout_marginRight="14dp"
                    android:gravity="center"
                    android:background="@drawable/my_layout_bg">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:background="@mipmap/coupons"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:layout_marginTop="8dp"
                        android:textColor="@color/color_212121"
                        android:text="@string/Coupons"/>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="84dp"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:background="@drawable/my_layout_bg">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:background="@mipmap/pay_by"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:layout_marginTop="8dp"
                        android:textColor="@color/color_212121"
                        android:text="@string/Payby"/>


                </LinearLayout>


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="24dp"
                android:background="@color/color_f5f5f5"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:orientation="vertical"
                android:gravity="center_vertical"
                android:background="@mipmap/my_vip">

                <TextView
                    android:layout_marginLeft="32dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:text="@string/暂未开通"/>

                <LinearLayout
                    android:layout_marginLeft="32dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:textColor="@color/color_212121"
                        android:text="@string/累计已省"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        android:textColor="@color/color_212121"
                        android:layout_marginLeft="12dp"
                        android:text="$669"/>

                </LinearLayout>


            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="34dp">

                <ImageView
                    android:id="@+id/iv_orders"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="30dp"
                    android:src="@mipmap/my_orders"/>

                <TextView
                    android:layout_toRightOf="@+id/iv_orders"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_marginLeft="16dp"
                    android:textColor="@color/color_212121"
                    android:text="@string/Orders"/>

                <ImageView
                    android:layout_width="5.38dp"
                    android:layout_height="8.92dp"
                    android:src="@mipmap/arrow_right"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="30dp"
                    android:layout_centerVertical="true"/>

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="20dp"
                android:background="@color/color_f5f5f5"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="34dp">

                <ImageView
                    android:id="@+id/iv_contactus"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="30dp"
                    android:src="@mipmap/my_contactus"/>

                <TextView
                    android:layout_toRightOf="@+id/iv_contactus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_marginLeft="16dp"
                    android:textColor="@color/color_212121"
                    android:text="@string/Contactus"/>

                <ImageView
                    android:layout_width="5.38dp"
                    android:layout_height="8.92dp"
                    android:src="@mipmap/arrow_right"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="30dp"
                    android:layout_centerVertical="true"/>

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="20dp"
                android:background="@color/color_f5f5f5"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="34dp">

                <ImageView
                    android:id="@+id/iv_settings"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="30dp"
                    android:src="@mipmap/my_settings"/>

                <TextView
                    android:layout_toRightOf="@+id/iv_settings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_marginLeft="16dp"
                    android:textColor="@color/color_212121"
                    android:text="@string/Settings"/>

                <ImageView
                    android:layout_width="5.38dp"
                    android:layout_height="8.92dp"
                    android:src="@mipmap/arrow_right"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="30dp"
                    android:layout_centerVertical="true"/>

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="20dp"
                android:background="@color/color_f5f5f5"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="34dp">

                <ImageView
                    android:id="@+id/iv_about"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="30dp"
                    android:src="@mipmap/my_about"/>

                <TextView
                    android:layout_toRightOf="@+id/iv_about"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_marginLeft="16dp"
                    android:textColor="@color/color_212121"
                    android:text="@string/About"/>

                <ImageView
                    android:layout_width="5.38dp"
                    android:layout_height="8.92dp"
                    android:src="@mipmap/arrow_right"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="30dp"
                    android:layout_centerVertical="true"/>

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="20dp"
                android:background="@color/color_f5f5f5"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>