<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_back"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:background="@mipmap/left_back"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="32dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:textColor="@color/color_212121"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/Codehasbeensendto"/>

    <TextView
        android:id="@+id/tv_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="26sp"
        android:textColor="@color/color_212121"
        android:layout_gravity="center"
        android:text="@string/one"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_1"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="58dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal"
            android:background="@drawable/phone_login_bg">

            <EditText
                android:id="@+id/et_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:textSize="24sp"
                android:layout_marginLeft="8dp"
                android:inputType="number"
                android:gravity="center"
                android:maxLength="1"
                android:textColor="@color/color_212121"
                android:layout_gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_2"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginRight="20dp"
            android:layout_height="58dp"
            android:orientation="horizontal"
            android:background="@drawable/phone_login_bg">

            <EditText
                android:id="@+id/et_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:textSize="24sp"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="1"
                android:layout_marginLeft="8dp"
                android:textColor="@color/color_212121"
                android:layout_gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_3"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginRight="20dp"
            android:layout_height="58dp"
            android:orientation="horizontal"
            android:background="@drawable/phone_login_bg">

            <EditText
                android:id="@+id/et_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:textSize="24sp"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="1"
                android:layout_marginLeft="8dp"
                android:textColor="@color/color_212121"
                android:layout_gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_4"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="58dp"
            android:orientation="horizontal"
            android:background="@drawable/phone_login_bg">

            <EditText
                android:id="@+id/et_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:textSize="24sp"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="1"
                android:layout_marginLeft="8dp"
                android:textColor="@color/color_212121"
                android:layout_gravity="center"/>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_verify_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_gravity="center"
        android:text=""/>

    <Button
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:textSize="16sp"
        android:textAllCaps="false"
        android:background="@drawable/phone_login_btn_bg"
        android:textColor="@color/white"
        android:text="@string/Verify"
        android:visibility="gone"/>

</LinearLayout>